azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "location": {
      "type": "string",
      "defaultValue": ""
    },
    "vmName": {
      "type": "string",
      "defaultValue": ""
    },
    "vmAdminName": {
      "type": "string",
      "defaultValue": ""
    },
    "vmAuthType": {
      "type": "string",
      "defaultValue": "password",
      "allowedValues": [
        "password",
        "sshPublicKey"
      ]
    },
    "vmAdminPassword": {
      "type": "securestring",
      "defaultValue": ""
    },
    "vmAdminSshPublicKey": {
      "type": "securestring",
      "defaultValue": ""
    },
    "vmSize": {
      "type": "string",
      "defaultValue": "Standard_D2_v2",
      "allowedValues": [ ]
    },
    "managerPort": {
      "type": "string",
      "defaultValue": "443"
    },
    "heartbeatPort": {
      "type": "string",
      "defaultValue": "4120"
    },
    "databaseOption": {
      "type": "string",
      "defaultValue": "new",
      "allowedValues": [
        "new",
        "existing"
      ]
    },
    "dsmAdminName": {
      "type": "string",
      "defaultValue": ""
    },
    "dsmAdminPassword": {
      "type": "securestring",
      "defaultValue": ""
    },
    "existingSQLServerName": {
      "type": "string",
      "defaultValue": ""
    },
    "dbName": {
      "type": "string",
      "defaultValue": "dsm"
    },
    "dbAdminName": {
      "type": "string",
      "defaultValue": ""
    },
    "dbAdminPassword": {
      "type": "securestring",
      "defaultValue": ""
    },
    "publicIPAddressName": {
      "type": "string",
      "defaultValue": ""
    },
    "publicIPDomainNameLabel": {
      "type": "string",
      "defaultValue": ""
    },
    "virtualNetworkName": {
      "type": "string",
      "defaultValue": "dsmvnet"
    },
    "networkExists": {
      "type": "string",
      "defaultValue": "new",
      "allowedValues": [
        "new"
      ]
    },
    "networkAddress": {
      "type": "string",
      "defaultValue": "10.7.0.0/16"
    },
    "subnetVMName": {
      "type": "string",
      "defaultValue": "dsmsubnet"
    },
    "subnetVMNaddress": {
      "type": "string",
      "defaultValue": "10.7.0.0/24"
    },
    "baseUrl": {
      "type": "string",
      "metadata": {
        "description": "The base URL for dependent assets",
        "artifactsBaseUrl": ""
      },
      "defaultValue": "https://gallery.azure.com/artifact/20151001/trendmicro.deep-security-manager-st-byoldeep-security-manager-byol.1.0.7/Artifacts"
    }
  },
  "variables": {
    "location": "[parameters('location')]",
    "nicName": "[concat(parameters('vmName'),'-nic')]",
    "securityGroupName": "[concat(variables('nicName'),'-nsg')]",
    "vnetAddressPrefix": "[parameters('networkAddress')]",
    "subnet1Name": "[parameters('subnetVMName')]",
    "subnet1Prefix": "[parameters('subnetVMNaddress')]",
    "publicIPAddressType": "Dynamic",
    "vnetID": "[resourceId('Microsoft.Network/virtualNetworks',parameters('virtualNetworkName'))]",
    "subnet1Ref": "[concat(variables('vnetID'),'/subnets/',variables('subnet1Name'))]",
    "storageAccountName": "[tolower(concat(trim(substring(concat(parameters('vmName'),'       '),0,6)),uniquestring(resourceGroup().id)))]",
    "storageAccountType": "Standard_LRS",
    "vmStorageAccountContainerName": "vhds",
    "newsqlServerName": "[tolower(concat(parameters('vmName'),uniquestring(resourceGroup().id),'-sql'))]",
    "storage-api-version": "2015-06-15",
    "deployment-api-version": "2015-11-01",
    "network-api-version": "2015-06-15",
    "compute-api-version": "2015-06-15",
    "publisher": "trendmicro",
    "licenseMode": "20",
    "offerChoosed": "[variables('offerBYOL')]",
    "offerStandard_D2_v2": {
      "vmSize": "Standard_D2_v2",
      "vmSku": "dxxn25d2v2",
      "product": "deep-security-vm"
    },
    "offerStandard_D3_v2": {
      "vmSize": "Standard_D3_v2",
      "vmSku": "dxxn50d3v2",
      "product": "deep-security-vm"
    },
    "offerStandard_D4_v2": {
      "vmSize": "Standard_D4_v2",
      "vmSku": "dxxn100d4v2",
      "product": "deep-security-vm"
    },
    "offerStandard_D5_v2": {
      "vmSize": "Standard_D5_v2",
      "vmSku": "dxxn200d5v2",
      "product": "deep-security-vm"
    },
    "offerBYOL": {
      "vmSize": "[parameters('vmSize')]",
      "vmSku": "dxxnbyol",
      "product": "deep-security-vm-byol"
    },
    "linuxConfigurationChoosen": "[variables(concat('linuxConfiguration', parameters('vmAuthType')))]",
    "linuxConfigurationpassword": {
      "disablePasswordAuthentication": "false"
    },
    "linuxConfigurationsshPublicKey": {
      "disablePasswordAuthentication": "true",
      "ssh": {
        "publicKeys": [
          {
            "path": "[concat('/home/',parameters('vmAdminName'),'/.ssh/authorized_keys')]",
            "keyData": "[parameters('vmAdminSshPublicKey')]"
          }
        ]
      }
    }
  },
  "resources": [
    {
      "type": "Microsoft.Storage/storageAccounts",
      "name": "[variables('storageAccountName')]",
      "apiVersion": "[variables('storage-api-version')]",
      "location": "[variables('location')]",
      "properties": {
        "accountType": "[variables('storageAccountType')]"
      }
    },
    {
      "name": "buildSQLServer",
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "[variables('deployment-api-version')]",
      "dependsOn": [ ],
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[concat(parameters('baseUrl'), '/database-',parameters('databaseOption'),'.json')]",
          "contentVersion": "1.0.0.0"
        },
        "parameters": {
          "location": {
            "value": "[variables('location')]"
          },
          "newsqlServerName": {
            "value": "[variables('newsqlServerName')]"
          },
          "existingSQLServerName": {
            "value": "[parameters('existingSQLServerName')]"
          },
          "dbAdminName": {
            "value": "[parameters('dbAdminName')]"
          },
          "dbAdminPassword": {
            "value": "[parameters('dbAdminPassword')]"
          },
          "sqlDBName": {
            "value": "[parameters('dbName')]"
          }
        }
      }
    },
    {
      "apiVersion": "[variables('network-api-version')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[parameters('publicIPAddressName')]",
      "location": "[variables('location')]",
      "properties": {
        "publicIPAllocationMethod": "[variables('publicIPAddressType')]",
        "dnsSettings": {
          "domainNameLabel": "[parameters('publicIPDomainNameLabel')]"
        }
      }
    },
    {
      "apiVersion": "[variables('network-api-version')]",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[parameters('virtualNetworkName')]",
      "location": "[variables('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('vnetAddressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('subnet1Name')]",
            "properties": {
              "addressPrefix": "[variables('subnet1Prefix')]"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "[variables('network-api-version')]",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[variables('nicName')]",
      "location": "[variables('location')]",
      "dependsOn": [
        "[concat('Microsoft.Network/publicIPAddresses/', parameters('publicIPAddressName'))]",
        "[concat('Microsoft.Network/virtualNetworks/', parameters('virtualNetworkName'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('securityGroupName'))]"
      ],
      "properties": {
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('securityGroupName'))]"
        },
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',parameters('publicIPAddressName'))]"
              },
              "subnet": {
                "id": "[variables('subnet1Ref')]"
              }
            }
          }
        ]
      }
    },
    {
      "apiVersion": "[variables('network-api-version')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('securityGroupName')]",
      "location": "[variables('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "allow-inbound-ssh",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1000,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow-inbound-dsmportal",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "[parameters('managerPort')]",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1100,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow-inbound-dsmagent",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "4118",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1200,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow-inbound-dsmheartbeat",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "[parameters('heartbeatPort')]",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1300,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow-inbound-dsmdownload",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "4122",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1400,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow-inbound-dsmwebinstaller",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "8443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1500,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "[variables('compute-api-version')]",
      "type": "Microsoft.Compute/virtualMachines",
      "name": "[parameters('vmName')]",
      "location": "[variables('location')]",
      "dependsOn": [
        "[concat('Microsoft.Storage/storageAccounts/', variables('storageAccountName'))]",
        "[concat('Microsoft.Network/networkInterfaces/', variables('nicName'))]",
        "[concat('Microsoft.Resources/deployments/', 'buildSQLServer')]"
      ],
      "plan": {
        "publisher": "[variables('publisher')]",
        "product": "[variables('offerChoosed').product]",
        "name": "[variables('offerChoosed').vmSku]"
      },
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('offerChoosed').vmSize]"
        },
        "osProfile": {
          "computerName": "[parameters('vmName')]",
          "adminUsername": "[parameters('vmAdminName')]",
          "adminPassword": "[parameters('vmAdminPassword')]",
          "linuxConfiguration": "[variables('linuxConfigurationChoosen')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "[variables('publisher')]",
            "offer": "[variables('offerChoosed').product]",
            "sku": "[variables('offerChoosed').vmSku]",
            "version": "latest"
          },
          "osDisk": {
            "name": "[concat(parameters('vmName'),'-osDisk')]",
            "caching": "ReadWrite",
            "createOption": "FromImage",
            "vhd": {
              "uri": "[concat('https://',variables('storageAccountName'),'.blob.core.windows.net/',variables('vmStorageAccountContainerName'),'/',parameters('vmName'),'-osdisk.vhd')]"
            }
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces',variables('nicName'))]"
            }
          ]
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": "true",
            "storageUri": "[concat('https://',variables('storageAccountName'),'.blob.core.windows.net/')]"
          }
        }
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "name": "[concat(parameters('vmName'),'/installDSM')]",
      "apiVersion": "2015-05-01-preview",
      "location": "[variables('location')]",
      "dependsOn": [
        "[concat('Microsoft.Compute/virtualMachines/', parameters('vmName'))]"
      ],
      "properties": {
        "publisher": "Microsoft.OSTCExtensions",
        "type": "CustomScriptForLinux",
        "typeHandlerVersion": "1.2",
        "settings": {
          "commandToExecute": "cp ../../config/0.settings /opt/trend/packages/dsm/default/"
        },
        "protectedSettings": {
          "subscriptionId": "[subscription().subscriptionId]",
          "vmName": "[parameters('vmName')]",
          "databaseName": "[parameters('dbName')]",
          "adminUserName": "[parameters('dsmAdminName')]",
          "adminPassword": "[parameters('dsmAdminPassword')]",
          "databaseUserName": "[parameters('dbAdminName')]",
          "databaseUserPassword": "[parameters('dbAdminPassword')]",
          "licenseMode": "[variables('licenseMode')]",
          "databaseServer": "[reference('buildSQLServer').outputs.sqlServerFQDN.value]",
          "location": "[variables('location')]",
          "managerPort": "[parameters('managerPort')]",
          "heartbeatPort": "[parameters('heartbeatPort')]",
          "vmFQDN": "[reference(resourceId('Microsoft.Network/publicIPAddresses',parameters('publicIPAddressName')),providers('Microsoft.Network', 'publicIPAddresses').apiVersions[0]).dnsSettings.fqdn]",
          "databaseOption": "[parameters('databaseOption')]",
          "vmSize": "[variables('offerChoosed').vmSize]"
        }
      }
    }
  ]
}
